<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="divide">÷</string>
    <string name="remainder">%</string>
    <string name="multiply">×</string>
    <string name="equals_sign">=</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="point">.</string>
    <string name="number_zero">0</string>
    <string name="clear_sign">C</string>
    <string name="addition_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiply_sign">×</string>
    <string name="division_sign">÷</string>
</resources>
