<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="6"
    android:rowCount="5">

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="2"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textSize="28sp"
            android:text="@string/equals_sign"
            android:fontFamily="sans-serif"/>


        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/number_one"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/number_two"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/number_three"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/number_four"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/number_five"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/number_six"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/number_seven"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/number_eight"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/number_nine"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/point"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/number_zero"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/clear_sign"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/addition_sign"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/minus_sign"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/multiply_sign"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/division_sign"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:textSize="28sp"/>
</GridLayout>